[gd_scene load_steps=5 format=3 uid="uid://bn5ccsetw80ws"]

[ext_resource type="PackedScene" uid="uid://bcbu21ad2j17k" path="res://Scenes/stalactite.tscn" id="1_0p8pt"]
[ext_resource type="Script" path="res://Scripts/obstacles.gd" id="1_gav02"]
[ext_resource type="PackedScene" uid="uid://c734hjdf58kd0" path="res://Scenes/stalagmite.tscn" id="2_m7uuh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4f3hl"]
size = Vector2(10, 180)

[node name="Obstacles" type="Node2D"]
script = ExtResource("1_gav02")

[node name="Stalactite" parent="." instance=ExtResource("1_0p8pt")]
position = Vector2(140, 0)
scale = Vector2(2, 2)

[node name="Stalagmite" parent="." instance=ExtResource("2_m7uuh")]
position = Vector2(140, 180)
rotation = -3.14159
scale = Vector2(2, 2)

[node name="Score" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Score"]
position = Vector2(155, 90)
shape = SubResource("RectangleShape2D_4f3hl")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(150, 10)

[connection signal="body_entered" from="Stalactite" to="." method="_on_stalactite_body_entered"]
[connection signal="body_entered" from="Stalagmite" to="." method="_on_stalagmite_body_entered"]
[connection signal="body_entered" from="Score" to="." method="_on_score_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
